<resources>
    <string name="name" translatable="false">Urban Terrain</string>
    <string name="facebook_app_id">407180570953077</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_something_wrong">Something went wrong.</string>
    <string name="select_media_type">Select Type</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_network_connection">Network is not available. Please try again.</string>
    <string name="appName">Urban Terrain</string>
    <string name="txt_home">Home</string>
    <string name="discover">Discover</string>
    <string name="event">Event</string>
    <string name="profile">Profile</string>
    <string name="record">Record</string>
    <string name="sign_in_here">Sign-In-Here</string>
    <string name="password_hint">"Please enter your email address and \npassword to Sign-In here."</string>
    <string name="email_hint">Enter your email/Phone number</string>
    <string name="password">Password</string>
    <string name="txt_show">Show</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_in_with">Or SIGN-In-With</string>
    <string name="not_a_member">Not A Member?</string>
    <string name="register_now">Register Now</string>
    <string name="register_hint">Please enter your initial information to receive \na verification code for Registration. It will lost for \nten minutes before expiring.</string>
    <string name="email_hint_1">Enter your email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="con_password">Confirm Password</string>
    <string name="your_location">Your Location</string>
    <string name="search_location">Search Location</string>
    <string name="register_in_with">Or Register With</string>
    <string name="already_register">Already Registered?</string>
    <string name="sign_in_here_1">Sign In Here</string>
    <string name="otp_hint">A one time passcode has been sent to \n your registered email address. Please \nenter it below to continue.</string>
    <string name="one_time_password">One Time Password</string>
    <string name="verify">Verify</string>
    <string name="dont_have_code">Didn\'t receive the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_post">Create Post</string>
    <string name="record_activity">Record Activity</string>
    <string name="fb_login_error">Facebook login failed.</string>
    <string name="err_google_socia_token_blank">Access token must not be blank.</string>
    <string name="google_account_is_not_valid">Google account is not setup.</string>
    <string name="txt_email_phone_req">Email Address or Mobile Number is required.</string>
    <string name="err_email_blank">Email is required.</string>
    <string name="err_email_valid">Email must be valid.</string>
    <string name="err_password_blank">Password is required.</string>
    <string name="err_old_password">Old password and new password can not be same.</string>
    <string name="err_confirm_password">Password and confirm password does not match.</string>
    <string name="hide">Hide</string>
    <string name="err_phone_validation">Mobile number is invalid.</string>
    <string name="err_phone_number">Mobile number is required.</string>
    <string name="err_first_name">First name is required.</string>
    <string name="err_last_name">Last name is required.</string>
    <string name="err_password_lenght">Password must be greater than 5 characters.</string>
    <string name="err_height">Height is required.</string>
    <string name="err_weight">Weight is required.</string>
    <string name="err_unit">Unit is required.</string>
    <string name="email_already_exist">Email already exists.</string>
    <string name="phone_number_already_exist">Mobile number already exist.</string>
    <string name="otp_can_not_blank">Otp can not be blank.</string>
    <string name="runtime_permission">Location service wants to runtime permission. Please allow location permission.</string>
    <string name="req_current_location">Location service requests permission for OneFitPlus. Please allow.</string>
    <string name="allow">Allow</string>
    <string name="permission_req_1">Location Permission required.</string>
    <string name="permission_req_2">Why we need location permission?</string>
    <string name="permission_req_3">Urban Terrain app requires location permission to record your activity. The app tracks the location in the background as well while you are working out. When you stop recording then location tracking is also stopped.</string>
    <string name="permission_req_4">Features that use location in the background</string>
    <string name="permission_req_5">When urban terrain activity like bike or run is being recorded.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_background_permission">Urban Terrain requests Location service to provide runtime permission for location tracking. Please enable \'Allow all the time\' permission to access background location so that we can track your activity even when your app is not in foreground.</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="continue_text">CONTINUE</string>
    <string name="forgot_hint">Please enter your email address/phone number.\nYou will receive a link to create a new \npassword via email/SMS</string>
    <string name="search_hint">Search for area, street name &#8230;</string>
    <string name="current_location">Current Location</string>
    <string name="using_gps">Using GPS</string>
    <string name="saved_address">Saved Addresses</string>
    <string name="work">Work</string>
    <string name="address">B-4/5 Sec 63, B Block, Sector 36, Noida, Uttar Pradesh 675566, India.</string>
    <string name="home">Home</string>
    <string name="web_client_id">644129461756-v2kdtjsvqdha0eqc6a07o7o5q56g23ub.apps.googleusercontent.com</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="feet">Ft</string>
    <string name="kilogram">Kg</string>
    <string name="pound">Lbs</string>
    <string name="centimeter">Cm</string>
    <string name="err_dob">Date of Birth is required</string>
    <string name="err_gender">Gender is required.</string>
    <string name="err_location">Location is required.</string>
    <string name="edit">Edit?</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="callories">Callories</string>
    <string name="select_gender">Select preferred gender below</string>
    <string name="select_height_unit">Select preferred height unit below</string>
    <string name="select_weight_unit">Select preferred weight unit below</string>
    <string name="title_hint">Enter post title</string>
    <string name="description_hint">Description if Any</string>
    <string name="save">SAVE</string>
    <string name="activity_feel">How did that activity feel?</string>
    <string name="add_photos">Add Photos\n &amp; Videos</string>
    <string name="video_box">Video Box</string>
    <string name="add_more">ADD MORE</string>
    <string name="next">NEXT</string>
    <string name="back_single_video">Would you like to discard the current clip?</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="delete_profile_media">Are you sure, you want to delete this media?</string>
    <string name="stop_record_warning">Do you want to discard recording?</string>
    <string name="discard_activity_warning">Are you sure, you want to discard the activity?</string>
    <string name="permission_req">This is required for storage and camera permission</string>
    <string name="elevation_gain">Elevation \nGain</string>
    <string name="el_gain">Elevation Gain</string>
    <string name="moving_time">Moving \nTime</string>
    <string name="avg_pace">Avg Pace</string>
    <string name="average_power">Average \nPower</string>
    <string name="calories">Calories</string>
    <string name="save_activity">Save Activity</string>
    <string name="activity_title_hint">Enter your activity title</string>
    <string name="distance_text_km">%1$.1f km</string>
    <string name="speed_text_km">%1$.1f km/h</string>
    <string name="cycling">Cycling</string>
    <string name="_0_kmh">0 km/h</string>
    <string name="time_default">0</string>
    <string name="_0_cal">0</string>
    <string name="_0_m">0 m</string>
    <string name="no_data">Data not available!</string>
    <string name="easy">EASY</string>
    <string name="view_analysis">View Analysis</string>
    <string name="elevation">Elevation</string>
    <string name="pace">Pace</string>
    <string name="text_km">km</string>
    <string name="text_km_hr">km/hr</string>
    <string name="following">Following</string>
    <string name="myfollowing">My Following</string>
    <string name="myfollowers">My Followers</string>
    <string name="search">Search …</string>
    <string name="select_activity">Choose your activity</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="avg_speed">Average \nSpeed</string>
    <string name="mi_unit">/km</string>
    <string name="event_title1">Sunday Youth Group Mountain Cycling</string>
    <string name="event_title2">Youth Group</string>
    <string name="track_map">Track Event Location on Map</string>
    <string name="event_track_map">Event Location on Map</string>
    <string name="going">Going</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="emptyy">""</string>
    <string name="startdatetime">Start Date &amp; Time</string>
    <string name="enddatetime">End Date &amp; Time</string>
    <string name="largedummy">cccccccccccccccccccccccccccdfffffffffffffffffffffffffffffffffffffffffffffffffffdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddcccccccc</string>
    <string name="accepted_user">Accepted \nUser:</string>
    <string name="best_finish">Best Finish:</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="followers">Followers</string>
    <string name="interest">Interested In</string>
    <string name="interest1">INTEREST 1</string>
    <string name="interest2">INTEREST 2</string>
    <string name="interest3">INTEREST 3</string>
    <string name="interest4">INTEREST 4</string>
    <string name="finishers">Finishers</string>
    <string name="search_athletes">Search athletes</string>
    <string name="remove">Remove</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="email_hint_2">Your email address</string>
    <string name="text_address">Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="activities">Activities</string>
    <string name="moderate">MODERATE</string>
    <string name="people_near">People Near By You</string>
    <string name="see_all">See All</string>
    <string name="suggested_user">Suggested Uers</string>
    <string name="popular_route">Popular Routes</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="indoor_workout">Indoor Workout</string>
    <string name="event_attended">Event Attended</string>
    <string name="events_attended">Events Attended</string>
    <string name="notifications">Notifications</string>
</resources>