<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/poppin_semi_bold"
            android:text="@string/sign_in_here"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/password_hint"
            android:textColor="@color/color_c2c2c2"
            android:textSize="@dimen/_10sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_rect_rounded"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmailPhone"
                android:layout_width="0dp"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@color/black"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_BBBCBC"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailPhoneReq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/red"
            android:textSize="@dimen/_9sdp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_rect_rounded"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/black"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_BBBCBC"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowHide"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="?actionBarItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppin_medium"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/txt_show"
                android:textColor="@color/color_F1DA05"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPasswordReq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/red"
            android:textSize="@dimen/_9sdp"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppin_medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/color_F1DA05"
            android:textSize="@dimen/_10sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/color_F1DA05"
            android:fontFamily="@font/poppin_medium"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:visibility="visible"
            app:cornerRadius="@dimen/_40sdp"
            app:rippleColor="@color/colorLightBlue" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_rect_rounded_str"
                android:fontFamily="@font/poppins_light"
                android:paddingLeft="@dimen/_14sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:text="@string/sign_in_with"
                android:textColor="@color/color_a7a7a7"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFb"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_33sdp"
                android:background="@drawable/bg_rounded_20"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_fb" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_33sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/bg_rounded_20"
                android:backgroundTint="@color/color_DD4B39"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_google" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin_medium"
                android:text="@string/not_a_member"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/poppin_medium"
                android:text="@string/register_now"
                android:textColor="@color/color_F1DA05"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


